<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FFF"
    android:padding="15dp"
    android:layout_height="match_parent"
    tools:context=".update.PersonalUpdate">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/personalDetails"
                android:text="Update Personal details"
                android:textColor="#000"
                android:textSize="25sp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                android:hint="@string/fullName" />

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/mobile"
                android:inputType="phone"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/location"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/links"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/links"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/skills"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/skills"
                android:textSize="20dp" />


            <LinearLayout
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/save"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:background="#21B8DB"
                    android:textSize="20dp"
                    android:text="Update"
                    android:textAllCaps="false"
                    android:textColor="#FFF" />
            </LinearLayout>

            <TextView
                android:text="\n(Don't change the Name(1st TextBox)\n since name of profile pic is same as Name.)"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>