<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFF"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUp.PersonalDetails">



    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image"
                android:layout_width="125dp"
                android:layout_height="114dp"
                android:layout_gravity="center"
                android:background="@drawable/circle"
                android:src="@drawable/profilepic" />
            <TextView
                android:id="@+id/personalDetails"
                android:text="Personal details"
                android:textColor="#000"
                android:textSize="25sp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                android:hint="@string/fullName" />

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/mobile"
                android:inputType="phone"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/location"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/links"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/links"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/skills"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/skills"
                android:textSize="20dp" />


            <LinearLayout
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/save"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:background="#21B8DB"
                    android:textColor="#FFF"
                    android:textSize="20dp"
                    android:text="Save"
                    android:textAllCaps="false" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>